legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr45750.c-4.8.2-2.out.txt
pr45750.c:9:1: error: invalid initializer
 int invalid[] = 0;  
 ^
pr45750.c: In function ‘foo’:
pr45750.c:13:20: error: ‘undeclared’ undeclared (first use in this function)
   if (((struct S *)undeclared)->i);  
                    ^
pr45750.c:13:20: note: each undeclared identifier is reported only once for each function it appears in
